--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.5",
+    "@tanstack/react-query": "^5.32.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@types/node": "^20.2.5",
     "@types/react": "^18.0.37",
